# bayes_deep_compression

./: .env  .gitignore  .pre-commit-config.yaml  404.html  Example.ipynb  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: gh-pages.yml  python-app.yml  variational_tests.yml
bayess/: resulting_types.py  training.py
bayess/nn/: __init__.py  loss.py  loss_new.py  net.py  net_new.py  reparametrizations.py
bayess/priors/: priors.py
blog/: index.html
docs/: blog.md  development.md  index.md  intro.md  refernce.md  start.md
docs/api/: cli.md  eager.md  kf.md  report.md
docs/blog/: .authors.yml  blog.md
docs/kf-laplace-approximation/: inference.md  theory.md
docs/theory/: kf_laplace.md
docs/user_guide/: guide.md
docs/variational/: examples.md
docs/variational_gaussian/: implementation.md
examples/: Example.ipynb  kf-laplace.py  kl_example.ipynb  load_datasets.py  loader.py  main.ipynb  model.pt  renui_example shorten.ipynb  renui_example.ipynb  visualize.py
examples/jupyter/: Example.ipynb
examples/utils/: data_loader.py  drawer.py
markup/: d.py  i.py  simple.py  test.py
search/: search_index.json
src/: __main__.py  base_module.py  bootstrap.py  data.py  main.ipynb  training.py  visualize.py
src/cli/: cli.py
src/kf_laplace/: filters.py  flow.py  layer.py  sampler.py
src/model/: mlp.py  model.py
src/model_handler/: bayess_net.py
src/priors/: priors.py
src/pruning/: quantile.py
src/resource/: dataset.py  settings.py
src/strategy/: base.py  compression.py
src/utils/: attribute.py  drawer.py
src/variational_gaussian/: bayes_module.py  bayes_nn.py  bayessian_loss.py  (+4 more)
tests/: conftest.py  fixture.py  resulting_types.py  tesT_ideas.py  test.py
(+163 files in other folders)
